--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
                 <button class="headerbutt">Sign up</button>
             </div>
             <div class="heroimg">
-            <img src="images/square2.png" alt="">
+                <img src="images/header.jpg" alt="">
             </div>
         </div>
         <div class="text2">Some random information.</div>
         <div class="ticont">
             <div class="ti">
-                <img class="picture" src="images/square.png" alt="placeholder">
+                <img class="picture" src="images/box1.jpg" alt="placeholder">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="ti">
-                <img class="picture" src="images/square.png" alt="placeholder">
+                <img class="picture" src="images/box2.jpg" alt="placeholder">
                 <p class="subtext">this is some subtext under an illustration or image</p>
             </div>
             <div class="ti">
-                <img class="picture" src="images/square.png" alt="placeholder">
+                <img class="picture" src="images/box3.jpg" alt="placeholder">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="ti">
-                <img class="picture" src="images/square.png" alt="placeholder">
+                <img class="picture" src="images/box4.jpg" alt="placeholder">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
